infrastructure/wiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: wiki
  labels:
    app: wiki
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
      tier: backend
  template:
    metadata:
      labels:
        app: wiki
        tier: backend
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: wiki-pvc
          persistentVolumeClaim:
            claimName: wiki-pvc
        - name: localsettings-configmap
          configMap:
            name: localsettings-configmap
        - name: phpini-configmap
          configMap:
            name: phpini-configmap
      containers:
        - image: docker.io/kallepan/wiki:latest
          imagePullPolicy: Always
          name: wiki
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /index.php/Hauptseite
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /index.php/Hauptseite
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 20
          volumeMounts:
            - name: wiki-pvc
              mountPath: /var/www/html/images
            - name: localsettings-configmap
              mountPath: /var/www/html/LocalSettings.php
              subPath: LocalSettings.php
            - name: phpini-configmap
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          securityContext:
            allowPrivilegeEscalation: false
