infrastructure/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki
  labels:
    app: wiki
    tier: backend
spec:
  selector:
    app: wiki
    tier: backend
  ports:
    - protocol: TCP
      name: php
      port: 80
      targetPort: 80
